# dataroom

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  AUTHORS.md  LICENSE.md  README.md  docker-compose.yml  eslint.config.js  manage.py  orval.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.js
.github/workflows/: test.yml
backend/api/: authentication.py  cache.py  filters.py  pagination.py  permissions.py  urls.py
backend/api/datasets/: serializers.py  views.py
backend/api/images/: fields.py  filters.py  serializers.py  views.py
backend/api/opensearch/: views.py
backend/api/stats/: serializers.py  utils.py  views.py
backend/api/tags/: fields.py  serializers.py  views.py
backend/api/tokens/: serializers.py  views.py
backend/api/users/: serializers.py
backend/common/: base_model.py  fields.py  jinja_utils.py  upload_to_handler.py  validators.py
backend/config/: asgi.py  middleware.py  storage.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  local.example.py  prod.py  test.py
backend/dataroom/: admin.py  apps.py  choices.py  exceptions.py  opensearch.py  views.py
backend/dataroom/migrations/: 0001_init.py  0002_alter_attributesfield_name_alter_latenttype_name_and_more.py  0003_dataset.py  0004_add_is_indexed_field_to_attributes.py  0005_alter_attributesfield_array_type_and_more.py
backend/dataroom/models/: __init__.py  attributes.py  dataset.py  latents.py  os_image.py  stats.py  tag.py
backend/dataroom/opensearch_migrations/: 0001_attr_integer_to_long.py
backend/dataroom/templatetags/: dataroom_tags.py
backend/dataroom/utils/: approximate_count.py  async_open_image.py  cleanup_instance_files.py  disable_signals.py  disable_storage_custom_domain.py  download_image.py  fetch_embedding.py  get_vector_for_image_file.py  ramsam.py  umap.py  vectors.py
backend/deepscatter/: run.py
backend/task_runner/: index.jinja  run.py  task_config.py
backend/task_runner/tasks/: __init__.py  delete_images.py  delete_latents.py  r2_migration.py  update_datadog.py  update_images.py  update_stats.py  utils.py
backend/templates/: base.jinja  root.jinja
backend/templates/account/: account_inactive.jinja  base.jinja  login.jinja  logout.jinja
backend/templates/components/: button.jinja  card.jinja  forms.jinja  utils.jinja
backend/templates/dataroom/: spa.jinja
backend/users/: admin.py  context_processors.py  permissions.py  views.py
compose/django/: Dockerfile
compose/postgres/: init-db.sh
dataroom_client/: __init__.py  pyproject.toml
dataroom_client/dataroom_client/: client.py
frontend/src/: SPA.tsx  index.ts  router.tsx  urls.ts  vite-env.d.ts
frontend/styles/: base.css  buttons.css  container.css  index.css  theme.css
notebooks/: benchmark_get_images.ipynb  client_example.ipynb  image_latent.txt  loader_example.ipynb
orval/: fix-enums.sh
scripts/: migrate.sh  poetry-lock.sh  run_deepscatter.sh  run_tasks.sh  run_web.sh
tests/: async_runner_test.py  attributes_test.py  client_create_image_test.py  client_datasets_test.py  client_image_attributes_filter_test.py  client_image_embedding_test.py  client_image_latent_test.py  client_image_methods_test.py  client_image_related_images_test.py  client_image_similarity_test.py  client_image_test.py  client_readonly_token_test.py  client_sync_test.py  client_tag_test.py  client_update_image_test.py  conftest.py  image_test.py  opensearch_test.py  permissions_test.py  stats_test.py  utils.py  vectors.py
(+116 files in other folders)
